feat(devices): add new block handler helper and update device capabilities
- Add BlockHandlerHelper with utility methods for block position offsetting and item absorption
- Introduce functional interfaces BlockHandler and VoidBlockHandler for consistent block interaction patterns
- Update wenyan_programming dependency from 1.0.0 to 1.0.1 in build.gradle
- Create Capabilities class to register all device capabilities with their respective handler packages
- Add comprehensive entity manipulation handlers including spawn, status effects, potions, markers, projectiles and naming
- Implement projectile spawner with direction-based shooting instead of target position
- Add ManipulationHandlers for entity teleportation, force application and line-of-sight movement
- Create WorldHandlers with various world interaction capabilities like particles, enchantments, block editing
- Generate proper item tags for paper module including all device blocks and items
- Add jar.sh script for managing external dependencies during build process